# glapp

./: .gitignore  CMakeLists.txt  README.md  README.txt  _shader.txt  c  default.nix  ex  hmm.nix  result  tags
cmake/: FindGLFW.cmake
data/: asteroid.frag  asteroid.vert  asteroid_exam.frag  noise.glsl  object.frag  object.vert  paving-color_modified.ppm  sky-color.ppm  uvs.ppm
oldBuild/: .glapp.nix.kate-swp  CMakeCache.txt  Config.hpp  GLapp  Makefile  cmake_install.cmake  ex  flake.nix  glapp.nix  shell.nix
oldBuild/nixTest/: default.nix  result
oldBuild/nixTest2/: default.nix  result
oldBuild/nixTest3/: build.nix  default.nix  shell.nix
src/: Asteroid.cpp  Asteroid.hpp  GLapp.cpp  GLapp.hpp  Noise.cpp  Noise.hpp  Object.cpp  Object.hpp  Shader.cpp
